objects/QA_Test_Cases__c.object
<CustomObject>
    <description>Objeto para crear casos de Prueba por el equipo de QA</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Asignado_A__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asignado A</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pruebas_QA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dispositivo__c</fullName>
        <label>Dispositivo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ejecutado_Por__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutado Por</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pruebas_QA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estado_del_Caso__c</fullName>
        <label>Estado del Caso</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No iniciado</fullName>
                </value>
                <value>
                    <fullName>En test</fullName>
                </value>
                <value>
                    <fullName>En re-test</fullName>
                </value>
                <value>
                    <fullName>Postergado</fullName>
                </value>
                <value>
                    <fullName>Bloqueado</fullName>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>No Ok</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <label>Fecha Ejecución</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Creaci_n__c</fullName>
        <label>Fecha Creación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Planificada_Ejecuci_n__c</fullName>
        <label>Fecha Planificada Ejecución</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funcionalidad__c</fullName>
        <label>Funcionalidad</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Interno__c</fullName>
        <label>Interno</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Modificado</fullName>
                </value>
                <value>
                    <fullName>Nuevo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orden_de_Ejecuci_n__c</fullName>
        <inlineHelpText>indica el orden de Ejecución del proceso</inlineHelpText>
        <label>Orden de Ejecución</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Perfil__c</fullName>
        <label>Perfil</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proceso__c</fullName>
        <label>Proceso</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Prueba__c</fullName>
        <label>Prueba</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Release 1</fullName>
                </value>
                <value>
                    <fullName>Release 2</fullName>
                </value>
                <value>
                    <fullName>Release 3</fullName>
                </value>
                <value>
                    <fullName>Release 4</fullName>
                </value>
                <value>
                    <fullName>Release 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requerimiento_Asociado__c</fullName>
        <label>Requerimiento Asociado</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resultado_Esperado__c</fullName>
        <label>Resultado Esperado</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sistema__c</fullName>
        <label>Sistema</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Step_By_Step_Description__c</fullName>
        <label>Descripción del paso a paso</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sub_proceso__c</fullName>
        <label>Sub-proceso</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tipo_Dato__c</fullName>
        <label>Tipo Dato</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Registro__c</fullName>
        <label>Tipo Registro</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Caso__c</fullName>
        <label>Tipo de Caso</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Básico</fullName>
                </value>
                <value>
                    <fullName>Borde - Único</fullName>
                </value>
                <value>
                    <fullName>Erróneo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Ejecuci_n__c</fullName>
        <label>Tipo de Ejecución</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Prueba QA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Prueba QA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pruebas QA</pluralLabel>
    <recordTypes>
        <fullName>QA_test_cases</fullName>
        <active>true</active>
        <label>Pruebas QA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>